tests/ui/resolve/export-fully-qualified.stderr
error[E0433]: cannot find module or crate `foo` in this scope
  --> $DIR/export-fully-qualified.rs:8:20
   |
LL |     pub fn bar() { foo::baz(); }
   |                    ^^^ use of unresolved module or unlinked crate `foo`
   |
   = help: you might be missing a crate named `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
